página de login
alteração na página de login.

--- a/login.html
+++ b/login.html
@@ -23,6 +23,13 @@
     <input type="text" name="Sobrenome" id="Sobrenome" required autocomplete="additional-name" placeholder="Qual o seu sobrenome" minlength="5">
 </div>
 <div>
+    <label for="número de telefone
+    ">número de telefone</label>
+    <input type="tel" name="número de telefone
+    " id="número de telefone
+    " required autocomplete="tel" placeholder="Digite o seu número de telefone." min="12" max="13">
+</div>
+<div>
     <label for="Email">Email</label>
     <input type="email" name="Email" id="Email" required autocomplete="email" placeholder="Digite o seu endereço de email">
 </div>
