--- a/login.html
+++ b/login.html
@@ -13,7 +13,9 @@
         <p>Preencha os campos abaixo com as informações necessárias.    </p>
         
     </main>
-    <form action="" method="post" autocomplete="on">
+<a href="index.html">Voltar para o início    </a>
+    
+<form action="" method="post" autocomplete="on">
 <div>
     <label for="Nome">Nome</label>
     <input type="text" name="Nome" id="Nome" required autocomplete="name" placeholder="Qual o seu nome?" minlength="10">
